--- a/blog/views/register.ejs
+++ b/blog/views/register.ejs
@@ -7,26 +7,28 @@
 			  <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 			  <input id="username" type="text" class="form-control " name="username" placeholder="请输入注册用户名">
 			</div>
-			<span class="help-inline text-success"><span class="glyphicon glyphicon-ok"></span>该id可以使用</span>
+			<span class="help-inline text-success text-danger hidden"></span>
 			<div class="clearfix"></div>
+
 			<div class="input-group col-lg-4 col-xs-6 col-xs-offset-2 user-info">
 			  <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-			  <input type="text" class="form-control" name="password" placeholder="6-20位密码，不能为纯数字">
+			  <input type="text" id="password" class="form-control" name="password" placeholder="6-20位密码，不能为纯数字">
 			</div>
+			<span class="help-inline text-success"></span>
 			<div class="clearfix"></div>
 			<div class="input-group col-lg-4 col-xs-6 col-xs-offset-2 user-info">
 			  <span class="input-group-addon"><span class="glyphicon glyphicon-check"></span></span>
-			  <input type="text" class="form-control" name="repassword" placeholder="请确认密码">
+			  <input type="text" id="repassword" class="form-control" name="repassword" placeholder="请确认密码">
 			</div>
-			  
+			<span class="help-inline text-success text-danger"></span>
 			<div class="clearfix"></div>
 			<div class="input-group col-lg-4 col-xs-6 col-xs-offset-2 user-info">
 			  <span class="input-group-addon"><span class="glyphicon glyphicon-list-alt"></span></span>
-			  <input type="text" class="form-control" name="contact" placeholder="联系方式（选填）">
+			  <input type="text" id="contact" class="form-control" name="contact" placeholder="联系方式（选填）">
 			</div>
 			<div class="clearfix"></div>
 			<div class="col-lg-3 col-lg-offset-3">
-				<button id="register" class="btn">提交</button>
+				<button id="signup" class="btn">提交</button>
 				<button id="reset" class="btn">重置</button>
 			</div>
 		</form>
