--- a/blog/views/admin/layout.ejs
+++ b/blog/views/admin/layout.ejs
@@ -34,11 +34,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">用户管理<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">添加用户</a></li>
+            <li><a href="/admin/addUsers">添加用户</a></li>
             <li class="divider"></li>
-            <li><a href="#">修改用户</a></li>
+            <li><a href="updateUsers">修改用户</a></li>
             <li class="divider"></li>
-            <li><a href="#">删除用户</a></li>
+            <li><a href="/admin/removeUsers">删除用户</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -56,7 +56,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/admin/showTags">查看标签</a></li>
             <li class="divider"></li>
-            <li><a href="#">查看用户</a></li>
+            <li><a href="/admin/showUsers">查看用户</a></li>
             <li class="divider"></li>
             <li><a href="#">查看文章</a></li>
           </ul>
