完成文章添加修改删除查看模块，数据库更新

--- a/blog/views/admin/addTags.ejs
+++ b/blog/views/admin/addTags.ejs
@@ -31,7 +31,7 @@
 			  <div class="clearfix"></div>
 			  <div class="checkbox">
 			    <label>
-			      <input type="checkbox" name="tags" value="html">
+			      <input type="checkbox" name="tags" value="javascript">
 			      javascript
 			    </label>
 			  </div>
